--- a/deployer/src/main/resources/canal.properties
+++ b/deployer/src/main/resources/canal.properties
@@ -2,9 +2,9 @@
 ######### 		common argument		#############
 #################################################
 # tcp bind ip 注册的版本机Ip
-canal.ip = 192.168.3.102
+canal.ip = 172.21.32.4
 # register ip to zookeeper 将该ip地址注册进zookeeper
-canal.register.ip = 192.168.3.102
+canal.register.ip = 172.21.32.4
 canal.port = 11111
 canal.metrics.pull.port = 11112
 # canal instance user/passwd
@@ -12,14 +12,14 @@ canal.metrics.pull.port = 11112
 # canal.passwd = E3619321C1A937C46A0D8BD1DAC39F93B27D4458
 
 # canal admin config  canal管理端配置，用于从canal-admin平台获取配置好的集群以及其下的实例信息
-#canal.admin.manager = 127.0.0.1:8089
+canal.admin.manager = 172.21.32.4:8089
 canal.admin.port = 11110
 canal.admin.user = admin
 canal.admin.passwd = 4ACFE3202A5FF5CF467898FC58AAB1D615029441
 # admin auto register 如果canal-admin平台进行了配置，那么将会根据【canal.admin.register.name】指定的集群名称获取对应的实例信息
-#canal.admin.register.auto = true
-#canal.admin.register.cluster =
-#canal.admin.register.name =
+canal.admin.register.auto = true
+canal.admin.register.cluster = pp-adv-pro0
+canal.admin.register.name = faster
 
 # zookeeper配置，配置canal的实例信息
 canal.zkServers =10.30.5.17:12181,10.30.5.18:12181,10.30.5.19:12181
