--- a/deployer/src/main/resources/canal.properties
+++ b/deployer/src/main/resources/canal.properties
@@ -16,7 +16,7 @@ canal.admin.manager = 172.21.32.4:8089
 canal.admin.port = 11110
 canal.admin.user = admin
 canal.admin.passwd = 4ACFE3202A5FF5CF467898FC58AAB1D615029441
-# admin auto register 如果canal-admin平台进行了配置，那么将会根据【canal.admin.register.name】指定的集群名称获取对应的实例信息
+# admin auto register 如果canal-admin平台进行了配置，那么将会根据【canal.admin.register.name】指定的集群名称获取挂载在其下的实例信息
 canal.admin.register.auto = true
 canal.admin.register.cluster = pp-adv-pro0
 canal.admin.register.name = faster
@@ -98,7 +98,7 @@ canal.destinations = local-test-instance
 canal.conf.dir = ../conf
 # auto scan instance dir add/remove and start/stop instance 实例信息是否需要开启自动扫描
 canal.auto.scan = true
-# 实例信息自动扫描间隔时间，默认为5秒
+# 实例对应的配置信息变更时，自动扫描间隔时间，默认为5秒
 canal.auto.scan.interval = 5
 # set this value to 'true' means that when binlog pos not found, skip to latest.
 # WARN: pls keep 'false' in production env, or if you know what you want.
