--- a/deployer/src/main/resources/canal.properties
+++ b/deployer/src/main/resources/canal.properties
@@ -106,7 +106,7 @@ canal.auto.reset.latest.pos.mode = false
 canal.instance.tsdb.spring.xml = classpath:spring/tsdb/h2-tsdb.xml
 #canal.instance.tsdb.spring.xml = classpath:spring/tsdb/mysql-tsdb.xml
 # canal 实例全局相关配置
-# canal全局模式采用spring注入组件方式进行构建
+# canal实例全局生成方式，即处理canal实例的组件类是通过远程客户端还是本地的spring.xml文件，mode = spring or manager
 canal.instance.global.mode = spring
 # 是否延时加载，默认false，即立即加载
 canal.instance.global.lazy = false
